--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,6 +62,12 @@ flutter:
   assets:
   - imagenes/noticiero.jpg
   - imagenes/noticia_clubOlimpo.jpg
+  - imagenes/noticia2.jpg
+  - imagenes/noticia3.jpg
+  - imagenes/noticia4.jpg
+  - imagenes/noticia5.jpg
+  - imagenes/noticia6.jpg
+  - imagenes/noticia7.jpg
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
 
