--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,6 +9,8 @@ environment:
   sdk: ">=3.1.5 <4.0.0"
 
 dependencies:
+  firebase_core: ^3.6.0
+  firebase_auth: ^5.3.1
   flutter:
     sdk: flutter
 
@@ -18,7 +20,7 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
 
-  flutter_lints: ^2.0.0
+  flutter_lints: ^5.0.0
 
 flutter:
 
