--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,8 @@ dependencies:
 
   cupertino_icons: ^1.0.2
   provider: ^6.1.2
+  shared_preferences: ^2.2.2
+
 
 dev_dependencies:
   flutter_test:
