--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   provider: ^6.1.2
   shared_preferences: ^2.2.2
+  url_launcher: ^6.3.1
 
 
 dev_dependencies:
