--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   provider: ^6.1.2
   shared_preferences: ^2.2.2
   url_launcher: ^6.3.1
+  flutter_dotenv: ^5.2.1 
 
 
 dev_dependencies:
