--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   url_launcher: ^6.3.1
   carousel_slider: ^5.0.0
   flutter_dotenv: ^5.2.1 
+  cached_network_image: ^3.2.3 # o la versión más reciente
 
 
 dev_dependencies:
@@ -34,12 +35,5 @@ flutter:
   uses-material-design: true
 
   assets:
-  - imagenes/noticiero.jpg
-  - imagenes/noticia_clubOlimpo.jpg
-  - imagenes/noticia2.jpg
-  - imagenes/noticia3.jpg
-  - imagenes/noticia4.jpg
-  - imagenes/noticia5.jpg
-  - imagenes/noticia6.jpg
-  - imagenes/noticia7.jpg
+  - imagenes/ultimomomento.jpg
   
